sintatico.output
State 48 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 $@2: %empty

    3 programa: cabecalho $@1 variaveis $@2 rotinas T_INICIO lista_comandos T_FIM

    4 cabecalho: T_PROGRAMA T_IDENTIF

    5 variaveis: %empty
    6          | declaracao_variaveis

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    8                     | tipo lista_variaveis

    9 tipo: T_LOGICO
   10     | T_INTEIRO

   11 lista_variaveis: lista_variaveis T_IDENTIF
   12                | T_IDENTIF

   13 rotinas: %empty

   14 $@3: %empty

   15 rotinas: $@3 funcoes

   16 funcoes: funcao
   17        | funcao funcoes

   18 $@4: %empty

   19 $@5: %empty

   20 $@6: %empty

   21 funcao: T_FUNC tipo T_IDENTIF $@4 T_ABRE parametros T_FECHA $@5 variaveis $@6 T_INICIO lista_comandos T_FIMFUNC

   22 parametros: %empty
   23           | parametro parametros

   24 parametro: tipo T_IDENTIF

   25 lista_comandos: %empty
   26               | comando lista_comandos

   27 comando: entrada_saida
   28        | repeticao
   29        | selecao
   30        | atribuicao
   31        | retorno

   32 retorno: T_RETORNE expressao

   33 entrada_saida: leitura
   34              | escrita

   35 leitura: T_LEIA T_IDENTIF

   36 escrita: T_ESCREVA expressao

   37 $@7: %empty

   38 $@8: %empty

   39 repeticao: T_ENQTO $@7 expressao T_FACA $@8 lista_comandos T_FIMENQTO

   40 $@9: %empty

   41 $@10: %empty

   42 selecao: T_SE expressao T_ENTAO $@9 lista_comandos T_SENAO $@10 lista_comandos T_FIMSE

   43 $@11: %empty

   44 atribuicao: T_IDENTIF $@11 T_ATRIBUI expressao

   45 expressao: expressao T_VEZES expressao
   46          | expressao T_DIV expressao
   47          | expressao T_MAIS expressao
   48          | expressao T_MENOS expressao
   49          | expressao T_MAIOR expressao
   50          | expressao T_MENOR expressao
   51          | expressao T_IGUAL expressao
   52          | expressao T_E expressao
   53          | expressao T_OU expressao
   54          | termo

   55 identificador: T_IDENTIF

   56 chamada: %empty

   57 $@12: %empty

   58 chamada: T_ABRE $@12 lista_argumentos T_FECHA

   59 lista_argumentos: %empty
   60                 | expressao lista_argumentos

   61 termo: identificador chamada
   62      | T_NUMERO
   63      | T_V
   64      | T_F
   65      | T_NAO termo
   66      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 4
    T_INICIO (259) 3 21
    T_FIM (260) 3
    T_LEIA (261) 35
    T_ESCREVA (262) 36
    T_SE (263) 42
    T_ENTAO (264) 42
    T_SENAO (265) 42
    T_FIMSE (266) 42
    T_FACA (267) 39
    T_ENQTO (268) 39
    T_FIMENQTO (269) 39
    T_INTEIRO (270) 10
    T_LOGICO (271) 9
    T_RETORNE (272) 32
    T_FUNC (273) 21
    T_FIMFUNC (274) 21
    T_MAIS (275) 47
    T_MENOS (276) 48
    T_VEZES (277) 45
    T_DIV (278) 46
    T_ATRIBUI (279) 44
    T_MAIOR (280) 49
    T_MENOR (281) 50
    T_IGUAL (282) 51
    T_E (283) 52
    T_OU (284) 53
    T_NAO (285) 65
    T_ABRE (286) 21 58 66
    T_FECHA (287) 21 58 66
    T_V (288) 63
    T_F (289) 64
    T_IDENTIF (290) 4 11 12 21 24 35 44 55
    T_NUMERO (291) 62


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    programa (38)
        on left: 3
        on right: 0
    $@1 (39)
        on left: 1
        on right: 3
    $@2 (40)
        on left: 2
        on right: 3
    cabecalho (41)
        on left: 4
        on right: 3
    variaveis (42)
        on left: 5 6
        on right: 3 21
    declaracao_variaveis (43)
        on left: 7 8
        on right: 6 7
    tipo (44)
        on left: 9 10
        on right: 7 8 21 24
    lista_variaveis (45)
        on left: 11 12
        on right: 7 8 11
    rotinas (46)
        on left: 13 15
        on right: 3
    $@3 (47)
        on left: 14
        on right: 15
    funcoes (48)
        on left: 16 17
        on right: 15 17
    funcao (49)
        on left: 21
        on right: 16 17
    $@4 (50)
        on left: 18
        on right: 21
    $@5 (51)
        on left: 19
        on right: 21
    $@6 (52)
        on left: 20
        on right: 21
    parametros (53)
        on left: 22 23
        on right: 21 23
    parametro (54)
        on left: 24
        on right: 23
    lista_comandos (55)
        on left: 25 26
        on right: 3 21 26 39 42
    comando (56)
        on left: 27 28 29 30 31
        on right: 26
    retorno (57)
        on left: 32
        on right: 31
    entrada_saida (58)
        on left: 33 34
        on right: 27
    leitura (59)
        on left: 35
        on right: 33
    escrita (60)
        on left: 36
        on right: 34
    repeticao (61)
        on left: 39
        on right: 28
    $@7 (62)
        on left: 37
        on right: 39
    $@8 (63)
        on left: 38
        on right: 39
    selecao (64)
        on left: 42
        on right: 29
    $@9 (65)
        on left: 40
        on right: 42
    $@10 (66)
        on left: 41
        on right: 42
    atribuicao (67)
        on left: 44
        on right: 30
    $@11 (68)
        on left: 43
        on right: 44
    expressao (69)
        on left: 45 46 47 48 49 50 51 52 53 54
        on right: 32 36 39 42 44 45 46 47 48 49 50 51 52 53 60 66
    identificador (70)
        on left: 55
        on right: 61
    chamada (71)
        on left: 56 58
        on right: 61
    $@12 (72)
        on left: 57
        on right: 58
    lista_argumentos (73)
        on left: 59 60
        on right: 58 60
    termo (74)
        on left: 61 62 63 64 65 66
        on right: 54 65


State 0

    0 $accept: . programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    4 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    3 programa: cabecalho . $@1 variaveis $@2 rotinas T_INICIO lista_comandos T_FIM

    $default  reduce using rule 1 ($@1)

    $@1  go to state 6


State 4

    4 cabecalho: T_PROGRAMA T_IDENTIF .

    $default  reduce using rule 4 (cabecalho)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    3 programa: cabecalho $@1 . variaveis $@2 rotinas T_INICIO lista_comandos T_FIM

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    $default  reduce using rule 5 (variaveis)

    variaveis             go to state 9
    declaracao_variaveis  go to state 10
    tipo                  go to state 11


State 7

   10 tipo: T_INTEIRO .

    $default  reduce using rule 10 (tipo)


State 8

    9 tipo: T_LOGICO .

    $default  reduce using rule 9 (tipo)


State 9

    3 programa: cabecalho $@1 variaveis . $@2 rotinas T_INICIO lista_comandos T_FIM

    $default  reduce using rule 2 ($@2)

    $@2  go to state 12


State 10

    6 variaveis: declaracao_variaveis .

    $default  reduce using rule 6 (variaveis)


State 11

    7 declaracao_variaveis: tipo . lista_variaveis declaracao_variaveis
    8                     | tipo . lista_variaveis

    T_IDENTIF  shift, and go to state 13

    lista_variaveis  go to state 14


State 12

    3 programa: cabecalho $@1 variaveis $@2 . rotinas T_INICIO lista_comandos T_FIM

    T_FUNC    reduce using rule 14 ($@3)
    $default  reduce using rule 13 (rotinas)

    rotinas  go to state 15
    $@3      go to state 16


State 13

   12 lista_variaveis: T_IDENTIF .

    $default  reduce using rule 12 (lista_variaveis)


State 14

    7 declaracao_variaveis: tipo lista_variaveis . declaracao_variaveis
    8                     | tipo lista_variaveis .
   11 lista_variaveis: lista_variaveis . T_IDENTIF

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8
    T_IDENTIF  shift, and go to state 17

    $default  reduce using rule 8 (declaracao_variaveis)

    declaracao_variaveis  go to state 18
    tipo                  go to state 11


State 15

    3 programa: cabecalho $@1 variaveis $@2 rotinas . T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 19


State 16

   15 rotinas: $@3 . funcoes

    T_FUNC  shift, and go to state 20

    funcoes  go to state 21
    funcao   go to state 22


State 17

   11 lista_variaveis: lista_variaveis T_IDENTIF .

    $default  reduce using rule 11 (lista_variaveis)


State 18

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis .

    $default  reduce using rule 7 (declaracao_variaveis)


State 19

    3 programa: cabecalho $@1 variaveis $@2 rotinas T_INICIO . lista_comandos T_FIM

    T_LEIA     shift, and go to state 23
    T_ESCREVA  shift, and go to state 24
    T_SE       shift, and go to state 25
    T_ENQTO    shift, and go to state 26
    T_RETORNE  shift, and go to state 27
    T_IDENTIF  shift, and go to state 28

    $default  reduce using rule 25 (lista_comandos)

    lista_comandos  go to state 29
    comando         go to state 30
    retorno         go to state 31
    entrada_saida   go to state 32
    leitura         go to state 33
    escrita         go to state 34
    repeticao       go to state 35
    selecao         go to state 36
    atribuicao      go to state 37


State 20

   21 funcao: T_FUNC . tipo T_IDENTIF $@4 T_ABRE parametros T_FECHA $@5 variaveis $@6 T_INICIO lista_comandos T_FIMFUNC

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    tipo  go to state 38


State 21

   15 rotinas: $@3 funcoes .

    $default  reduce using rule 15 (rotinas)


State 22

   16 funcoes: funcao .
   17        | funcao . funcoes

    T_FUNC  shift, and go to state 20

    $default  reduce using rule 16 (funcoes)

    funcoes  go to state 39
    funcao   go to state 22


State 23

   35 leitura: T_LEIA . T_IDENTIF

    T_IDENTIF  shift, and go to state 40


State 24

   36 escrita: T_ESCREVA . expressao

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 47
    identificador  go to state 48
    termo          go to state 49


State 25

   42 selecao: T_SE . expressao T_ENTAO $@9 lista_comandos T_SENAO $@10 lista_comandos T_FIMSE

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 50
    identificador  go to state 48
    termo          go to state 49


State 26

   39 repeticao: T_ENQTO . $@7 expressao T_FACA $@8 lista_comandos T_FIMENQTO

    $default  reduce using rule 37 ($@7)

    $@7  go to state 51


State 27

   32 retorno: T_RETORNE . expressao

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 52
    identificador  go to state 48
    termo          go to state 49


State 28

   44 atribuicao: T_IDENTIF . $@11 T_ATRIBUI expressao

    $default  reduce using rule 43 ($@11)

    $@11  go to state 53


State 29

    3 programa: cabecalho $@1 variaveis $@2 rotinas T_INICIO lista_comandos . T_FIM

    T_FIM  shift, and go to state 54


State 30

   26 lista_comandos: comando . lista_comandos

    T_LEIA     shift, and go to state 23
    T_ESCREVA  shift, and go to state 24
    T_SE       shift, and go to state 25
    T_ENQTO    shift, and go to state 26
    T_RETORNE  shift, and go to state 27
    T_IDENTIF  shift, and go to state 28

    $default  reduce using rule 25 (lista_comandos)

    lista_comandos  go to state 55
    comando         go to state 30
    retorno         go to state 31
    entrada_saida   go to state 32
    leitura         go to state 33
    escrita         go to state 34
    repeticao       go to state 35
    selecao         go to state 36
    atribuicao      go to state 37


State 31

   31 comando: retorno .

    $default  reduce using rule 31 (comando)


State 32

   27 comando: entrada_saida .

    $default  reduce using rule 27 (comando)


State 33

   33 entrada_saida: leitura .

    $default  reduce using rule 33 (entrada_saida)


State 34

   34 entrada_saida: escrita .

    $default  reduce using rule 34 (entrada_saida)


State 35

   28 comando: repeticao .

    $default  reduce using rule 28 (comando)


State 36

   29 comando: selecao .

    $default  reduce using rule 29 (comando)


State 37

   30 comando: atribuicao .

    $default  reduce using rule 30 (comando)


State 38

   21 funcao: T_FUNC tipo . T_IDENTIF $@4 T_ABRE parametros T_FECHA $@5 variaveis $@6 T_INICIO lista_comandos T_FIMFUNC

    T_IDENTIF  shift, and go to state 56


State 39

   17 funcoes: funcao funcoes .

    $default  reduce using rule 17 (funcoes)


State 40

   35 leitura: T_LEIA T_IDENTIF .

    $default  reduce using rule 35 (leitura)


State 41

   65 termo: T_NAO . termo

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    identificador  go to state 48
    termo          go to state 57


State 42

   66 termo: T_ABRE . expressao T_FECHA

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 58
    identificador  go to state 48
    termo          go to state 49


State 43

   63 termo: T_V .

    $default  reduce using rule 63 (termo)


State 44

   64 termo: T_F .

    $default  reduce using rule 64 (termo)


State 45

   55 identificador: T_IDENTIF .

    $default  reduce using rule 55 (identificador)


State 46

   62 termo: T_NUMERO .

    $default  reduce using rule 62 (termo)


State 47

   36 escrita: T_ESCREVA expressao .
   45 expressao: expressao . T_VEZES expressao
   46          | expressao . T_DIV expressao
   47          | expressao . T_MAIS expressao
   48          | expressao . T_MENOS expressao
   49          | expressao . T_MAIOR expressao
   50          | expressao . T_MENOR expressao
   51          | expressao . T_IGUAL expressao
   52          | expressao . T_E expressao
   53          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 59
    T_MENOS  shift, and go to state 60
    T_VEZES  shift, and go to state 61
    T_DIV    shift, and go to state 62
    T_MAIOR  shift, and go to state 63
    T_MENOR  shift, and go to state 64
    T_IGUAL  shift, and go to state 65
    T_E      shift, and go to state 66
    T_OU     shift, and go to state 67

    $default  reduce using rule 36 (escrita)


State 48

   61 termo: identificador . chamada

    T_ABRE  shift, and go to state 68

    T_ABRE    [reduce using rule 56 (chamada)]
    $default  reduce using rule 56 (chamada)

    chamada  go to state 69


State 49

   54 expressao: termo .

    $default  reduce using rule 54 (expressao)


State 50

   42 selecao: T_SE expressao . T_ENTAO $@9 lista_comandos T_SENAO $@10 lista_comandos T_FIMSE
   45 expressao: expressao . T_VEZES expressao
   46          | expressao . T_DIV expressao
   47          | expressao . T_MAIS expressao
   48          | expressao . T_MENOS expressao
   49          | expressao . T_MAIOR expressao
   50          | expressao . T_MENOR expressao
   51          | expressao . T_IGUAL expressao
   52          | expressao . T_E expressao
   53          | expressao . T_OU expressao

    T_ENTAO  shift, and go to state 70
    T_MAIS   shift, and go to state 59
    T_MENOS  shift, and go to state 60
    T_VEZES  shift, and go to state 61
    T_DIV    shift, and go to state 62
    T_MAIOR  shift, and go to state 63
    T_MENOR  shift, and go to state 64
    T_IGUAL  shift, and go to state 65
    T_E      shift, and go to state 66
    T_OU     shift, and go to state 67


State 51

   39 repeticao: T_ENQTO $@7 . expressao T_FACA $@8 lista_comandos T_FIMENQTO

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 71
    identificador  go to state 48
    termo          go to state 49


State 52

   32 retorno: T_RETORNE expressao .
   45 expressao: expressao . T_VEZES expressao
   46          | expressao . T_DIV expressao
   47          | expressao . T_MAIS expressao
   48          | expressao . T_MENOS expressao
   49          | expressao . T_MAIOR expressao
   50          | expressao . T_MENOR expressao
   51          | expressao . T_IGUAL expressao
   52          | expressao . T_E expressao
   53          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 59
    T_MENOS  shift, and go to state 60
    T_VEZES  shift, and go to state 61
    T_DIV    shift, and go to state 62
    T_MAIOR  shift, and go to state 63
    T_MENOR  shift, and go to state 64
    T_IGUAL  shift, and go to state 65
    T_E      shift, and go to state 66
    T_OU     shift, and go to state 67

    $default  reduce using rule 32 (retorno)


State 53

   44 atribuicao: T_IDENTIF $@11 . T_ATRIBUI expressao

    T_ATRIBUI  shift, and go to state 72


State 54

    3 programa: cabecalho $@1 variaveis $@2 rotinas T_INICIO lista_comandos T_FIM .

    $default  reduce using rule 3 (programa)


State 55

   26 lista_comandos: comando lista_comandos .

    $default  reduce using rule 26 (lista_comandos)


State 56

   21 funcao: T_FUNC tipo T_IDENTIF . $@4 T_ABRE parametros T_FECHA $@5 variaveis $@6 T_INICIO lista_comandos T_FIMFUNC

    $default  reduce using rule 18 ($@4)

    $@4  go to state 73


State 57

   65 termo: T_NAO termo .

    $default  reduce using rule 65 (termo)


State 58

   45 expressao: expressao . T_VEZES expressao
   46          | expressao . T_DIV expressao
   47          | expressao . T_MAIS expressao
   48          | expressao . T_MENOS expressao
   49          | expressao . T_MAIOR expressao
   50          | expressao . T_MENOR expressao
   51          | expressao . T_IGUAL expressao
   52          | expressao . T_E expressao
   53          | expressao . T_OU expressao
   66 termo: T_ABRE expressao . T_FECHA

    T_MAIS   shift, and go to state 59
    T_MENOS  shift, and go to state 60
    T_VEZES  shift, and go to state 61
    T_DIV    shift, and go to state 62
    T_MAIOR  shift, and go to state 63
    T_MENOR  shift, and go to state 64
    T_IGUAL  shift, and go to state 65
    T_E      shift, and go to state 66
    T_OU     shift, and go to state 67
    T_FECHA  shift, and go to state 74


State 59

   47 expressao: expressao T_MAIS . expressao

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 75
    identificador  go to state 48
    termo          go to state 49


State 60

   48 expressao: expressao T_MENOS . expressao

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 76
    identificador  go to state 48
    termo          go to state 49


State 61

   45 expressao: expressao T_VEZES . expressao

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46
